--- a/src/meson.build
+++ b/src/meson.build
@@ -1,7 +1,8 @@
 mlx90640_video_i2c_postprocessing_sources = [
     'main.cpp',
     'mlx90640.cpp',
-    'dev_handler.cpp'
+    'dev_handler.cpp',
+    'push_data.cpp'
 ]
 
 mlx90640_video_i2c_postprocessing_deps = [
@@ -10,16 +11,6 @@ mlx90640_video_i2c_postprocessing_deps = [
 ]
 
 executable('mlx90640_video-i2c_postprocessing', mlx90640_video_i2c_postprocessing_sources,
-    dependencies: mlx90640_video_i2c_postprocessing_deps,
-    include_directories : include_directories('../include'),
-    install: true,
-)
-
-push_data_sources = [
-    'push_data.cpp'
-]
-
-executable('push_data', push_data_sources,
     dependencies: mlx90640_video_i2c_postprocessing_deps,
     include_directories : include_directories('../include'),
     install: true,
