--- a/src/meson.build
+++ b/src/meson.build
@@ -8,7 +8,8 @@ mlx90640_video_i2c_postprocessing_sources = [
 mlx90640_video_i2c_postprocessing_deps = [
     dependency('gstreamer-1.0'),
     dependency('gstreamer-video-1.0'),
-    dependency('gstreamer-app-1.0')
+    dependency('gstreamer-app-1.0'),
+    dependency('gstreamer-controller-1.0'),
 ]
 
 executable('mlx90640_video-i2c_postprocessing', mlx90640_video_i2c_postprocessing_sources,
